  Fix handling of PeriodType when either years or months missing

- Partial.with(DateTimeFieldType,int) [#88]
  Validation in this method was not as thorough as that in the constructor
  This allowed invalid partials to be created

- MutableDateTime.add(DateTimeFieldType,int), addDays(int) and friends [#77]
  Adding zero to a MutableDateTime used to change the offset during DST overlap in autumn/fall
  This is now fixed to not change the offset

- DateTime/MutableDateTime constructors taking millis now validate [#100]
  Previously, new DateTime(Long.MAX_VALUE) would be accepted, now it will be rejected
  This ensures that the maximum/minimum year are respected

- Ensure isLeap() returns correct result for day fields [#110]
  Day-of-month and day-of-year fields should report leap days

- Handle broken Android implementations better [#103]
  Apparently some Android implementations throw ClassCastException when comparing different types
  Thats dumb and wrong but the change to handle it is harmless

- Better concurrency in parsing [#101]

- Better Javadoc for parsing of numbers in format patterns [#60]

- Remove uncaughtException calls [#59]
  Previously the code called ThreadGroup.uncaughtException() which was invalid

- Better Javadoc for thread saefty of DateTimeUtils [#67]

- Better Javadoc for DateTimeComparator [#73]

- Fix the links to the IANA time zone database [#83]

- Better Javadoc for DateTimeFormatter parsing [#78]

- Better Javadoc for DateTimeFormat fraction of second [#62]


Scala
--------
Joda-Time uses annotations from Joda-Convert.
In the Java programming language, this dependency is optional, however in Scala it is not.
Scala users must manually add the Joda-Convert v1.2 dependency.


Feedback
--------
Feedback is best received using GitHub issues and Pull Requests.
https://github.com/JodaOrg/joda-time/

Feedback is also welcomed via the joda-interest mailing list.

The Joda team
http://www.joda.org/joda-time/