@@ -90,6 +90,9 @@ Bug fixes since 2.3
 - Ensure isLeap() returns correct result for day fields [#110]
   Day-of-month and day-of-year fields should report leap days
 
+- Handle weird TimeZone implementations with null ID [#133]
+  Calling DateTimeZone.forTimeZone() would break if the ID was null
+
 - Handle broken Android implementations better [#103]
   Apparently some Android implementations throw ClassCastException when comparing different types
   Thats dumb and wrong but the change to handle it is harmless
